--- a/app/src/main/res/layout/addmenu_layout.xml
+++ b/app/src/main/res/layout/addmenu_layout.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/addmenu"
-        android:textSize="36sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         android:fontFamily="@font/muli_black"
         android:textColor="@color/black"
@@ -109,6 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="text"
+                    android:editable="true"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
