--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -97,15 +97,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             >
+
             <CheckBox
+                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
-                android:text="Lưu đăng nhập"
-                android:buttonTint="@color/black"
                 android:layout_centerVertical="true"
-                android:textColor="@color/black"
-                />
+                android:buttonTint="@color/black"
+                android:text="Lưu đăng nhập"
+                android:textColor="@color/black" />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
