--- a/app/src/main/res/layout/register2nd_layout.xml
+++ b/app/src/main/res/layout/register2nd_layout.xml
@@ -27,18 +27,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
+
             <TextView
                 android:id="@+id/txt_signup2nd_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/create_acc"
-                android:textColor="@color/black"
-                android:fontFamily="@font/muli_black"
-                android:textSize="40sp"
-                android:textAllCaps="true"
-                android:layout_marginTop="20dp"
                 android:layout_centerVertical="true"
-                />
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/muli_black"
+                android:text="@string/create_acc"
+                android:textAllCaps="true"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/txt_signup2nd_text"
