--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -87,7 +87,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/white"
         android:text="@string/howwork"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:backgroundTint="@color/white"
         style="@style/Widget.AppCompat.Button.Borderless"/>
 
