--- a/app/src/main/res/layout/displayhome_layout.xml
+++ b/app/src/main/res/layout/displayhome_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="Danh mục chức năng"
+                android:text="Chức năng"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -53,7 +53,7 @@
                         android:id="@+id/layout_displayhome_ThongKe"
                         android:layout_width="65dp"
                         android:layout_height="65dp"
-                        android:elevation="8dp"
+                        android:elevation="20dp"
                         android:layout_margin="10dp"
                         android:background="@color/colorPrimary"
                         >
@@ -200,13 +200,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Thực đơn loại"
-                    android:textSize="20sp"
-                    android:fontFamily="@font/muli_black"
-                    android:textColor="@color/black"
-                    android:textAllCaps="true"
                     android:layout_centerVertical="true"
-                    />
+                    android:fontFamily="@font/muli_black"
+                    android:text="Thực đơn loại"
+                    android:textAllCaps="true"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
                 <TextView
                     android:id="@+id/txt_displayhome_ViewAllCategory"
                     android:layout_width="wrap_content"
